--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -21,8 +21,23 @@ $white: #ffffff;
 $black: #000000;
 
 $green: #10b981;
+$green-50: #ecfdf5;
+$green-200: #bbf7d0;
+$green-500: #10b981;
+$green-600: #059669;
+$green-700: #047857;
+
 $red: #ef4444;
+$red-50: #fef2f2;
+$red-200: #fecaca;
+$red-500: #ef4444;
+$red-700: #b91c1c;
+
 $yellow: #f59e0b;
+$yellow-50: #fffbeb;
+$yellow-200: #fde68a;
+$yellow-700: #b45309;
+
 $blue: #3b82f6;
 
 $mobile: 480px;
